@@ -6,5 +6,5 @@ import org.ztemplates.web.script.css.ZICssPreprocessor;
 
 public interface ZICssProcessor
 {
-  public String computeHtmlTags(List<String> cssExposed, ZICssPreprocessor preprocessor) throws Exception;
+  public String computeHtmlTags(List<String> cssExposed, ZICssPreprocessor preprocessor, String ztemplatesCssDigest) throws Exception;
 }
